--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>★★★ THE SLOPULATOR ★★★ - ULTIMATE PROPERTY ANALYSIS TOOL v3</title>
+    <title>★★★ THE SLOPULATOR ★★★ - COMP ME DADDY LIVE</title>
     <link rel="stylesheet" href="style.css?v=999">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <style>
