Remove comps dashboard, fix date format, add correlation column (v1013)

--- a/index.html
+++ b/index.html
@@ -1225,9 +1225,10 @@
                                             <th><font color="#FFFF00">ADDRESS</font></th>
                                             <th><font color="#FFFF00">PRICE</font></th>
                                             <th><font color="#FFFF00">$/SQFT</font></th>
-                                            <th><font color="#FFFF00">DATE SOLD</font></th>
-                                            <th><font color="#FFFF00">MILES AWAY</font></th>
-                                            <th><font color="#FFFF00">FINISH LEVEL</font></th>
+                                            <th><font color="#FFFF00">DATE</font></th>
+                                            <th><font color="#FFFF00">MILES</font></th>
+                                            <th><font color="#FFFF00">CORRELATION</font></th>
+                                            <th><font color="#FFFF00">FINISH</font></th>
                                         </tr>
                                     </thead>
                                     <tbody id="detailedCompsBody">
@@ -1284,6 +1285,6 @@
         </table>
     </div>
 
-    <script src="app.js?v=1012"></script>
+    <script src="app.js?v=1013"></script>
 </body>
 </html>
