--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>★★★ THE SLOPULATOR ★★★ - COMP ME DADDY LIVE</title>
     <link rel="stylesheet" href="style.css?v=999">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <style>
         /* Inline critical retro styles */
@@ -1266,9 +1267,7 @@
                                     <b>🗺️ LOCATION MAP - PROXIMITY VIEW 🗺️</b>
                                 </font>
                                 <br><br>
-                                <div id="compMapContainer">
-                                    <font color="#00FF00" face="Courier New">Map will appear after address search...</font>
-                                </div>
+                                <div id="compMap" style="width:100%; height:450px; border:3px solid #FF00FF; border-radius:10px;"></div>
                             </td>
                         </tr>
                     </table>
@@ -1285,6 +1284,7 @@
         </table>
     </div>
 
-    <script src="app.js?v=1013"></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+    <script src="app.js?v=1014"></script>
 </body>
 </html>
