Add Renovated ARV calculation based on quality comps only (v1021)

--- a/index.html
+++ b/index.html
@@ -1261,6 +1261,18 @@
                                             </td>
                                         </tr>
                                     </table>
+                                    <br>
+                                    <table border="2" cellpadding="10" cellspacing="0" width="100%">
+                                        <tr>
+                                            <td bgcolor="#003300" align="center" style="border: 3px solid #00FF00;">
+                                                <font color="#00FF00" face="Comic Sans MS" size="4"><b>🔥 RENOVATED ARV (High-End Finish)</b></font>
+                                                <br>
+                                                <font color="#00FF00" size="6" id="renovatedARV">$0</font>
+                                                <br>
+                                                <font color="#FFFF00" size="3">Based on avg <span id="compAvgPPSF">$0</span> from quality comps only</font>
+                                            </td>
+                                        </tr>
+                                    </table>
                                 </div>
                             </td>
                         </tr>
@@ -1361,6 +1373,6 @@
         </table>
     </div>
 
-    <script src="app.js?v=1020"></script>
+    <script src="app.js?v=1021"></script>
 </body>
 </html>
