Fix Comp Me Daddy button on mobile - remove complex inline onclick (v1022)

--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                             </button>
                             <br><br>
                             <br><br>
-                            <button id="compMeDaddyBtn" class="retro-button-comp" style="background: linear-gradient(45deg, #FF00FF, #00FFFF);" onclick="fireConfetti(); playWhipSound(); const addr = document.getElementById('addressInput').value; console.log('Comp Me Daddy clicked with address:', addr); window.currentAddress = addr; document.getElementById('compMeDaddyPage').style.display='block'; document.body.style.overflow='hidden'; document.getElementById('compMeDaddyAddress').value = addr; if(addr && addr.length > 5) { setTimeout(function() { window.runCompMeDaddyAnalysis(); }, 500); }">
+                            <button id="compMeDaddyBtn" class="retro-button-comp" style="background: linear-gradient(45deg, #FF00FF, #00FFFF);">
                                 <marquee behavior="alternate" scrollamount="5" width="200">
                                     <b>💎 COMP ME DADDY 💎</b>
                                 </marquee>
@@ -1373,6 +1373,6 @@
         </table>
     </div>
 
-    <script src="app.js?v=1021"></script>
+    <script src="app.js?v=1022"></script>
 </body>
 </html>
