Fix Comp Me Daddy button - remove marquee, add mobile touch styles (v1023)

--- a/index.html
+++ b/index.html
@@ -104,6 +104,14 @@
                 width: 90% !important;
                 margin: 5px auto !important;
                 font-size: 14px !important;
+                min-height: 44px;
+                touch-action: manipulation;
+            }
+            
+            #compMeDaddyBtn {
+                width: 90% !important;
+                margin: 10px auto !important;
+                display: block;
             }
         }
     </style>
@@ -521,10 +529,8 @@
                             </button>
                             <br><br>
                             <br><br>
-                            <button id="compMeDaddyBtn" class="retro-button-comp" style="background: linear-gradient(45deg, #FF00FF, #00FFFF);">
-                                <marquee behavior="alternate" scrollamount="5" width="200">
-                                    <b>💎 COMP ME DADDY 💎</b>
-                                </marquee>
+                            <button id="compMeDaddyBtn" class="retro-button-comp" style="background: linear-gradient(45deg, #FF00FF, #00FFFF); padding: 15px 30px; font-size: 18px; cursor: pointer; -webkit-tap-highlight-color: transparent;">
+                                <b>💎 COMP ME DADDY 💎</b>
                             </button>
                         </td>
                     </tr>
@@ -1373,6 +1379,6 @@
         </table>
     </div>
 
-    <script src="app.js?v=1022"></script>
+    <script src="app.js?v=1023"></script>
 </body>
 </html>
