--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                             </button>
                             <br><br>
                             <br><br>
-                            <button id="compMeDaddyBtn" class="retro-button-comp" style="background: linear-gradient(45deg, #FF00FF, #00FFFF); padding: 15px 30px; font-size: 18px; cursor: pointer; -webkit-tap-highlight-color: transparent;">
+                            <button id="compMeDaddyBtn" class="retro-button-comp" style="background: linear-gradient(45deg, #FF00FF, #00FFFF); padding: 15px 30px; font-size: 18px; cursor: pointer; -webkit-tap-highlight-color: transparent;" onclick="window.openCompMeDaddy(); return false;">
                                 <b>💎 COMP ME DADDY 💎</b>
                             </button>
                         </td>
@@ -1379,6 +1379,6 @@
         </table>
     </div>
 
-    <script src="app.js?v=1025"></script>
+    <script src="app.js?v=1026"></script>
 </body>
 </html>
