Add error alert

--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@
                                         }
                                     } catch (err) {
                                         console.error('PropertyReach error:', err);
+                                        alert('Error loading property data. Try typing thisisunsafe on this page if HTTP is blocked.');
                                     }
                                 }
                                 
