--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                 <div id="addressSuggestions" class="suggestions" style="left: 50%; transform: translateX(-50%); width: 90%; max-width: 500px;"></div>
                             </div>
                             <script>
-                                // Real address autocomplete using OpenStreetMap
+                                // // Real address autocomplete using OpenStreetMap
                                 let acTimeout;
                                 function handleAddressInput(value) {
                                     clearTimeout(acTimeout);
