Terminal hacker vibe - clean, fast, premium

--- a/index.html
+++ b/index.html
@@ -244,13 +244,7 @@
                     <!-- API Data Section (MOVED UP) -->
                     <tr>
                         <td bgcolor="#003300" style="border: 5px groove #00FF00;">
-                            <font face="Comic Sans MS" color="#FFFF00" size="4">
-                                <b>📊 API DATA (AUTO-MAGICAL!) 📊</b>
-                            </font>
-                            <br>
-                            <font face="Courier New" color="#00FF00" size="2">
-                                <blink>★ CLICK TO EDIT IF YOU KNOW BETTER! ★</blink>
-                            </font>
+                            >> API DATA
                             <br><br>
 
                             <table border="2" cellpadding="8" cellspacing="0" width="100%" class="input-table">
