Fix duplicate styles, add rent fallback when API missing

--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
                                         <b>Purchase Price ($):</b>
                                     </td>
                                     <td bgcolor="#000000">
-                                        <input type="number" id="purchasePrice" class="retro-input-small" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="0" oninput="document.getElementById('purchasePrice').value = this.value; document.querySelectorAll('#purchasePrice').forEach(el => { if(el !== this) el.value = this.value; });">
+                                        <input type="number" id="purchasePrice" class="retro-input-small" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="0" oninput="document.getElementById('purchasePrice').value = this.value; document.querySelectorAll('#purchasePrice').forEach(el => { if(el !== this) el.value = this.value; });">
                                     </td>
                                     <td bgcolor="#000066" align="right">
                                         <b>Repair Costs ($):</b>
                                     </td>
                                     <td bgcolor="#000000">
-                                        <input type="number" id="repairCost" class="retro-input-small" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="0" oninput="document.getElementById('repairCost').value = this.value; document.querySelectorAll('#repairCost').forEach(el => { if(el !== this) el.value = this.value; });">
+                                        <input type="number" id="repairCost" class="retro-input-small" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="0" oninput="document.getElementById('repairCost').value = this.value; document.querySelectorAll('#repairCost').forEach(el => { if(el !== this) el.value = this.value; });">
                                     </td>
                                 </tr>
                                 <tr>
@@ -218,7 +218,7 @@
                                         <b>Monthly Rent ($):</b>
                                     </td>
                                     <td bgcolor="#000000" colspan="3">
-                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from API" style="width: 100%;">
+                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from API" style="width: 100%;">
                                     </td>
                                 </tr>
                                 <tr>
@@ -355,7 +355,7 @@
                                         <b>Monthly Rent Est ($):</b>
                                     </td>
                                     <td bgcolor="#000000">
-                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from rent range">
+                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from rent range">
                                     </td>
                                     <td bgcolor="#000066"></td>
                                     <td bgcolor="#000000"></td>
