Add hidden price range fields

--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
                                     </td>
                                     <td bgcolor="#000000" colspan="3">
                                         <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from API" style="width: 100%;">
+                                <input type="hidden" id="priceRangeLow" value="0">
+                                <input type="hidden" id="priceRangeHigh" value="0">
                                     </td>
                                 </tr>
                                 <tr>
@@ -354,6 +356,8 @@
                                     </td>
                                     <td bgcolor="#000000">
                                         <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from rent range">
+                                <input type="hidden" id="priceRangeLow" value="0">
+                                <input type="hidden" id="priceRangeHigh" value="0">
                                     </td>
                                     <td bgcolor="#000066"></td>
                                     <td bgcolor="#000000"></td>
