Add hidden loading overlay

--- a/index.html
+++ b/index.html
@@ -975,5 +975,7 @@
     </div>
 
     <script src="app.js?v=10004"></script>
+<!-- Hidden loading overlay -->
+<div id="loadingOverlay" style="display:none;"></div>
 </body>
 </html>
