--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                                         <b>Monthly Rent ($):</b>
                                     </td>
                                     <td bgcolor="#000000" colspan="3">
-                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from API" style="width: 100%;">
+                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from API" oninput="document.getElementById('rentEstimateDetail').value = this.value;">
                                 <input type="hidden" id="priceRangeLow" value="0">
                                 <input type="hidden" id="priceRangeHigh" value="0">
                                     </td>
@@ -247,7 +247,7 @@
                                         <b>PropertyReach Value ($):</b>
                                     </td>
                                     <td bgcolor="#000000">
-                                        <input type="number" id="PropertyReach Estimate" class="retro-input-small api-field" placeholder="Auto-populated">
+                                        <input type="number" id="arvInput" class="retro-input-small api-field" placeholder="Auto-populated">
                                     </td>
                                     <td bgcolor="#663300" align="right">
                                         <b>Price Range Low ($):</b>
@@ -355,7 +355,7 @@
                                         <b>Monthly Rent Est ($):</b>
                                     </td>
                                     <td bgcolor="#000000">
-                                        <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from rent range">
+                                        <input type="number" id="rentEstimateDetail" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from rent range" oninput="document.getElementById('rentEstimate').value = this.value;">
                                 <input type="hidden" id="priceRangeLow" value="0">
                                 <input type="hidden" id="priceRangeHigh" value="0">
                                     </td>
