Remove price range low/high; fix rent not to fabricate values
- Remove Price Range Low/High rows from HTML table (were empty anyway)
- Remove all hidden priceRangeLow/priceRangeHigh inputs (unused)
- Rent fallback: was calculating estimatedValue * 0.008 when API returned
  no rent data, producing fake numbers like $1300 for 925 S 3rd St.
  Now: rent field left blank if API has no estimatedRentAmount — user fills it in

--- a/index.html
+++ b/index.html
@@ -219,8 +219,6 @@
                                     </td>
                                     <td bgcolor="#000000" colspan="3">
                                         <input type="number" id="rentEstimate" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from API" oninput="document.getElementById('rentEstimateDetail').value = this.value;">
-                                <input type="hidden" id="priceRangeLow" value="0">
-                                <input type="hidden" id="priceRangeHigh" value="0">
                                     </td>
                                 </tr>
                                 <tr>
@@ -249,17 +247,8 @@
                                     <td bgcolor="#000000">
                                         <input type="number" id="arvInput" class="retro-input-small api-field" placeholder="Auto-populated">
                                     </td>
-                                    <td bgcolor="#663300" align="right">
-                                        <b>Price Range Low ($):</b>
-                                    </td>
-                                    <td bgcolor="#000000">
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td bgcolor="#663300" align="right">
-                                        <b>Price Range High ($):</b>
-                                    </td>
-                                    <td bgcolor="#000000">
+                                    <td bgcolor="#663300"></td>
+                                    <td bgcolor="#000000"></td>
                                 </tr>
                                 <tr>
                                     <td bgcolor="#663300" align="right">
@@ -356,8 +345,6 @@
                                     </td>
                                     <td bgcolor="#000000">
                                         <input type="number" id="rentEstimateDetail" class="retro-input-small api-field" style="font-size: 20px; padding: 10px; font-weight: bold; background: #001a00; border: 2px solid #00ff00;" placeholder="Auto from rent range" oninput="document.getElementById('rentEstimate').value = this.value;">
-                                <input type="hidden" id="priceRangeLow" value="0">
-                                <input type="hidden" id="priceRangeHigh" value="0">
                                     </td>
                                     <td bgcolor="#000066"></td>
                                     <td bgcolor="#000000"></td>
